# Windows-Configurator

./: Cargo.toml  README.md  build.rs  config.ini
.github/workflows/: rust.yml
assets/: config.ini
assets/resources/buttons/: commands  control_panel_settings  win_settings
assets/resources/commands/: control_panel_settings.ini  network_commands_admin.ini  network_commands_admin.txt  troubleshooting_commands.ini  troubleshooting_commands_hidden.ini  win_settings
assets/resources/files/winget/: location
src/: app.rs  lib.rs  main.rs  multithread.rs  page_apps.bak  page_apps.rs  page_main.rs  page_troubleshoot.rs  page_windows_settings.rs  unpack_multi.rs
src/pages/: mod.rs
src/pages/applications/: mod.rs
src/pages/main/: mod.rs
src/pages/settings/: mod.rs
src/pages/troubleshooting/: mod.rs
src/pages_apps/: mod.rs  page_apps.rs  page_config_edit.rs  page_config_error.rs  page_tokens.rs
src/pages_other/: mod.rs  page_debug.rs  page_main.rs
src/pages_settings/: mod.rs  page_windows_settings.rs
src/pages_troubleshooting/: mod.rs  page_troubleshoot.rs
src/tests/: mod.rs
