[package]
name = "windows_configurator"
version = "0.3.0"
edition = "2021"
authors = ["Confused Engineer"]
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.29.1", features = ["all_loaders"]}
image = { version = "0.25.4", features = ["png"] }
serde = { version = "1.0.215", features = ["derive"] }
env_logger = "0.11.5"
rust-ini = "0.21.1"



[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"

[[bin]]
name = "Windows_Configurator"
path = "src/main.rs"