[package]
name = "windows_configurator"
version = "0.3.0"
edition = "2021"
authors = ["Confused Engineer"]
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.32.3"
eframe = { version = "0.32.3", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.32.3", features = ["all_loaders"]}
image = { version = "0.25.4", features = ["png"] }
serde = { version = "1.0.225", features = ["derive"] }
rust-ini = "0.21.1"
davids-standard-library = {git = "https://github.com/Confused-Engineer/davids-standard-library.git"}
winapi = { version = "0.3", features = ["securitybaseapi", "shellapi", "winuser", "processthreadsapi", "handleapi", "minwinbase", "minwindef", "winnt"] }
widestring = "1.0"
reqwest = { version = "0.12.23", features = ["blocking"] }


[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[build-dependencies]
winres = "0.1"
static_vcruntime = "2.0"

[[bin]]
name = "Windows_Configurator"
path = "src/main.rs"
